a lot of little fixes for shift web

--- a/hackathon/assets/css/styles.css
+++ b/hackathon/assets/css/styles.css
@@ -310,7 +310,7 @@ h2.prizes-h2 {
 }
 
 .judges-avatar16 {
-	background-image: url('../img/judges/.png');
+	background-image: url('../img/judges/filipdebowski.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-color: #ffffff;
